header and footer separated from list.ejs with layout

--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TodoList with ejs!</title>
-  </head>
+  <%- include('header') %>
   <body>
-    <h1><%= today %></h1>
-    <ul id="todo-list">
+    <div class="box">
+      <h1 id="heading"><%= today %></h1>
+    </div>
+    <div class="box">
       <% for(const item of items) { %>
-      <li><%= item %></li>
+      <ul class="item">
+        <input type="checkbox" />
+        <li><%= item %></li>
+        <form action="/delete" method="post">
+          <button
+            class="delete-btn"
+            type="submit"
+            name="deleteItem"
+            value="<%= item %>"
+          >
+            -
+          </button>
+        </form>
+      </ul>
       <% } %>
-    </ul>
-    <form action="/" method="post">
-      <input
-        type="text"
-        name="newItem"
-        id="new-item"
-        placeholder="enter a new item"
-      />
-      <button type="submit">Add to list</button>
-    </form>
+      <form class="item" action="/add" method="post">
+        <input
+          type="text"
+          name="newItem"
+          id="new-item"
+          placeholder="enter a new item"
+          autocomplete="off"
+        />
+        <button type="submit">+</button>
+      </form>
+    </div>
+    <%- include('footer') %>
   </body>
 </html>
