--- a/todolist-v1/public/css/styles.css
+++ b/todolist-v1/public/css/styles.css
@@ -54,6 +54,15 @@ li {
   padding-left: 0;
 }
 
+p {
+  margin: 0;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 200;
+  color: #00204a;
+  text-align: center;
+}
+
 form {
   text-align: center;
   margin-left: 20px;
