delete operation : using findByIdAndRemove method

--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -15,7 +15,7 @@
             class="delete-btn"
             type="submit"
             name="deleteItem"
-            value="<%= item %>"
+            value="<%= item._id %>"
           >
             -
           </button>
